--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <title>HOME</title>
 </head>
 <body>
+
     <h1>การทำนายผลลัพท์ของพันธ์ดอกแกลดิโอลัส</h1>
 
     {% if prediction %}
@@ -31,5 +32,11 @@
         <br><br>
         <button type="submit">ผลลัพท์</button>
     </form>
+    <div>
+        <img src='static\iris_setosa.jpg' alt="setosa">
+        <img src='static\iris_versicolor.jpg' alt="versicolor">
+        <img src='static\iris_virginica.jpg' alt="virginica">
+    </div>
+
 </body>
 </html>
