--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -12,7 +12,7 @@
 
     <center>
 
-        <h1> PREDICTION </h1>
+        <h1> พันธ์ดอกแกลดิโอลัส </h1>
 
 {% if prediction == 'setosa' %}
 <h1>Iris-setosa</h1>
@@ -29,7 +29,7 @@
 
 
         <br><br>
-    <a href='/'>Go back to home page</a><br>
+    <a href='/'>กลับหน้าหลัก</a><br>
     <br><a href='/all_result'>All Result</a>
     </center>
 
